Display Admin Page

--- a/src/Code-First from Database/WebAppCRUD/Web.config
+++ b/src/Code-First from Database/WebAppCRUD/Web.config
@@ -7,6 +7,7 @@
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
+    
     <pages>
       <namespaces>
         <add namespace="System.Web.Optimization" />
@@ -16,7 +17,11 @@
       </controls>
     </pages>
   </system.web>
+  <connectionStrings>
+    <add name="WWdb" connectionString="data source=.;initial catalog=WestWind;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <runtime>
+   
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1"> 
       <dependentAssembly>
         <assemblyIdentity name="Antlr3.Runtime" publicKeyToken="eb42632606e9261f" />
