--- a/src/Code-First from Database/WebAppCRUD/WebAppCRUD.csproj
+++ b/src/Code-First from Database/WebAppCRUD/WebAppCRUD.csproj
@@ -110,6 +110,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="About.aspx" />
+    <Content Include="Admin\ViewCategories.aspx" />
     <Content Include="Admin\ViewProducts.aspx" />
     <Content Include="Contact.aspx" />
     <Content Include="Content\bootstrap-theme.css" />
@@ -165,6 +166,13 @@
     <Content Include="Site.Mobile.Master" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Admin\ViewCategories.aspx.cs">
+      <DependentUpon>ViewCategories.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Admin\ViewCategories.aspx.designer.cs">
+      <DependentUpon>ViewCategories.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Admin\ViewProducts.aspx.cs">
       <DependentUpon>ViewProducts.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
