--- a/src/Code-First from Database/WestWindSystem/packages.config
+++ b/src/Code-First from Database/WestWindSystem/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
+  <package id="EntityFramework" version="6.3.0" targetFramework="net472" />
+  <package id="FreeCode.WebApp" version="0.1.7205.21979" targetFramework="net472" />
+  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
 </packages>
