--- a/src/Code-First from Database/WestWindSystem/WestWindSystem.csproj
+++ b/src/Code-First from Database/WestWindSystem/WestWindSystem.csproj
@@ -61,6 +61,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BLL\CRUDController.cs" />
+    <Compile Include="BLL\SupplierChainManagement.cs" />
     <Compile Include="Entities\Address.cs" />
     <Compile Include="Entities\BuildVersion.cs" />
     <Compile Include="Entities\Category.cs" />
@@ -79,6 +80,8 @@
     <Compile Include="Entities\Territory.cs" />
     <Compile Include="DAL\WestWindContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReadModels\SupplierProduct.cs" />
+    <Compile Include="ReadModels\SupplierSummary.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
