--- a/src/Custom Identity/WebApp/Web.config
+++ b/src/Custom Identity/WebApp/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=Demo;Integrated Security=True" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+  <add name="People" connectionString="data source=.;initial catalog=Demo;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.7.2" />
