--- a/src/Custom Identity/WebApp/Web.config
+++ b/src/Custom Identity/WebApp/Web.config
@@ -9,8 +9,10 @@
   <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=Demo;Integrated Security=True" providerName="System.Data.SqlClient" />
-  <add name="People" connectionString="data source=.;initial catalog=Demo;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
+    <add name="DefaultConnection"
+         connectionString="Data Source=.;Initial Catalog=Demo;Integrated Security=True"
+         providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.7.2" />
