--- a/src/Custom Identity/WebApp/WebApp.csproj
+++ b/src/Custom Identity/WebApp/WebApp.csproj
@@ -366,6 +366,7 @@
     </Compile>
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Admin\Security\SecurityDbContextInitializer.cs" />
     <Compile Include="Site.Master.cs">
       <DependentUpon>Site.Master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
