STubbed out ORderProcessingControler

--- a/src/West Wind Demo/WestWindSystem/WestWindSystem.csproj
+++ b/src/West Wind Demo/WestWindSystem/WestWindSystem.csproj
@@ -55,9 +55,14 @@
   <ItemGroup>
     <Compile Include="BLL\AboutController.cs" />
     <Compile Include="BLL\OrderHistoryController.cs" />
+    <Compile Include="BLL\OrderProcessingController.cs" />
     <Compile Include="BLL\ProductManagementController.cs" />
     <Compile Include="BLL\SalesController.cs" />
     <Compile Include="BLL\SetupUserRegistrationController.cs" />
+    <Compile Include="DataModels\OrderProductInformation.cs" />
+    <Compile Include="DataModels\OutstandingOrder.cs" />
+    <Compile Include="DataModels\ProductShipment.cs" />
+    <Compile Include="DataModels\ShipperSelection.cs" />
     <Compile Include="DataModels\DatabaseVersion.cs" />
     <Compile Include="DataModels\EditCustomerOrder.cs" />
     <Compile Include="DataModels\InvoiceHeader.cs" />
@@ -66,6 +71,7 @@
     <Compile Include="DataModels\ProductSummary.cs" />
     <Compile Include="DataModels\RegionalManager.cs" />
     <Compile Include="DataModels\SetupUserInfo.cs" />
+    <Compile Include="DataModels\ShippingDirections.cs" />
     <Compile Include="Entities\Address.cs" />
     <Compile Include="Entities\BuildVersion.cs" />
     <Compile Include="Entities\Category.cs" />
